--- a/Notebooks/Geleneksel ML Churn.ipynb
+++ b/Notebooks/Geleneksel ML Churn.ipynb
@@ -4,40 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Keras ile Deep Learning Yaklaşımı\n",
+    "# Geleneksel ML İşleyişi\n",
     "\n",
-    "- Bu Modelde ise diğerlerine oranla Churn Olmayanların Sayısı Churn olanların 2 katı olarak belirlendi, Burada ise veri setindeki kategorik değişkenler işlendikten sonra, Veriseti (-1,1) arasında scale edilip, Array haline getiriliyor ve model'in parametreleri verildikten sonra model ile eğitiliyor ardından test veriseti verilip tahminler alınıyor ve bu tahminler gerçek verisetiyle karşılaştırıldıktan sonra model'in ne kadar doğru çalıştığı ortaya çıkıyor."
+    "- Basitçe veri setindeki kategorik değişkenler düzenlenip, Churnler 1614 Churn Olmayanlar 18.375 Olduğu için verisetinde küçük bir filtrelemeye gittik. Burada Churn Olmayanların sayısı Churn olanların 3 katı olarak belirlendi, Ardından Veri seti eğitim ve test olmak üzere 2 ye bölünüp gradient boosting classifier modelinde tahminler yapıldı. Ve gerçek sonuçlar ile karşılaştırıldı."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\Anaconda\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import numpy as np\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers.core import Dense, Dropout, Activation, Flatten\n",
-    "from keras.layers.noise import GaussianNoise\n",
-    "from keras.layers.normalization import BatchNormalization\n",
+    "import pandas as pd\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn import preprocessing\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
     "from sklearn.metrics import confusion_matrix, accuracy_score\n",
-    "from keras.layers.advanced_activations import PReLU\n",
-    "from keras.utils import np_utils\n",
-    "import types\n",
-    "import tempfile\n",
-    "import keras.models\n",
-    "import keras\n",
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.model_selection import train_test_split\n",
     "import pickle"
    ]
   },
@@ -268,7 +254,7 @@
     }
    ],
    "source": [
-    "data = pd.read_excel(\"newdataFullv3.xlsx\")\n",
+    "data = pd.read_excel(\"../Datasets/newdataFullv3.xlsx\")\n",
     "data = data.dropna()\n",
     "columns = ['CEK_TUTAR',\n",
     " 'VADE_GUN',\n",
@@ -335,7 +321,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -417,7 +405,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn import preprocessing\n",
     "le = preprocessing.LabelEncoder()\n",
     "\n",
     "objects = [\"SON5ISTIHBARAT_SONUC\",\"SON5POLITIKA_SONUC\",\"SON5CEK_RENK_ORTALAMASI\",\"SON5KULLANDIRIM\",\"ŞUBE\",\"SIRKET_TURU\"]\n",
@@ -429,28 +416,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Bu kısımda ise elimde **1614 Churn** ve **18.375 Churn Olmayan** Data olduğu için overfitting yaşamamak adına, bunları ilk önce eşitledim, testlerim sonucunda ise Churn Sayısının 2 Katına kadar Churn olmayan alabileceğimi farkettim ve En optimize değer için bunu 2 kat olarak belirledim\n",
-    "\n",
-    "- Not: Normalde diğer modeller bu oran 3 olsada keras'ta bunu 3 yapınca overfitting oluşuyordu bu yüzden bunu 2 ile sınırlandırdım."
+    "- Bu kısımda ise elimde **1614 Churn** ve **18.375 Churn Olmayan** Data olduğu için overfitting yaşamamak adına, bunları ilk önce eşitledim, testlerim sonucunda ise Churn Sayısının 3 Katına kadar Churn olmayan alabileceğimi farkettim ve En optimize değer için bunu 3 kat olarak belirledim"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data'nın Bölünmeden Önceki Boyutu 19989\n",
+      "Data'nın Yeni Boyutu:  6456\n"
+     ]
+    }
+   ],
    "source": [
+    "print(\"Data'nın Bölünmeden Önceki Boyutu\", len(data))\n",
     "dataChurn = data[data.Churn == 1]\n",
     "dataNormal = data[data.Churn == 0]\n",
-    "data = pd.concat([dataNormal.sample(len(dataChurn)*3, random_state=39,replace=True), dataChurn])"
+    "data = pd.concat([dataNormal.sample(len(dataChurn)*3, random_state=5,replace=True), dataChurn])\n",
+    "print(\"Data'nın Yeni Boyutu: \", len(data))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Burada ise veriyi Test ve Eğitim olmak üzere 2'ye böldüm verinin %20 si test %80'i train olarak ayrıldı.\n",
-    "- Aynı zamanda burada ayırdığım veri setlerini Array'a çevirerek (-1,1) Arasında Scale edip o şekilde modele yolladım."
+    "- Burada ise veriyi Test ve Eğitim olmak üzere 2'ye böldüm verinin %20 si test %80'i train olarak ayrıldı."
    ]
   },
   {
@@ -462,100 +457,39 @@
     "X = data.iloc[:, data.columns != 'Churn']\n",
     "y = data.Churn\n",
     "\n",
-    "# Splitting the dataset into the Training set and Test set\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.20, random_state = 25)\n",
-    "\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "scaler = MinMaxScaler((-1,1))\n",
-    "X_train_scaled = scaler.fit_transform(X_train)\n",
-    "X_test_scaled = scaler.transform(X_test)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.20, random_state = 25)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Bu kısımda ise Model'in parametrelerini belirliyoruz. Burada:\n",
-    "\n",
-    "- Eğitim Turu Sayısı (**Epoch**) : 1800\n",
-    "- Parça Sayısı (**Batch Size**): 200 Olarak Belirlendi. \n",
-    "- Ardından Modele giriş layer'ını ekledik ve 2 adet hidden layer ekledik bunlardaki node sayısı ise **15**'ti Aktivasyon fonksiyonu olarak daha önce churn araştırmalarında daha doğrusu binary classification(0-1 sınıflandırması) araştırmalarında hard_sigmoid kullanıldığı için bunu tercih ettik. En son olarakta Çıktı layer'ımız verildi."
+    "- Burada çoğu modeli denesemde daha önceki çalışmalarımda ağırlıklı olarak kullandığım ve parametrelerini daha rahat belirleyebildiğim gradient boosting classifier algoritmasını kullandım. Sonucum ve Hata matrisimde aşağıdaki gibi çıktı."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x28c338db128>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "batch_size = 200\n",
-    "nb_epoch = 1800\n",
-    "\n",
-    "model = Sequential()\n",
-    "\n",
-    "model.add(Dense(55, input_shape=(50,)))\n",
-    "model.add(Activation(\"hard_sigmoid\"))\n",
-    "model.add(BatchNormalization())\n",
-    "model.add(Dropout(0.1))\n",
-    "\n",
-    "model.add(Dense(15))\n",
-    "model.add(Activation(\"hard_sigmoid\"))\n",
-    "model.add(BatchNormalization())\n",
-    "model.add(Dropout(0.1))\n",
-    "\n",
-    "model.add(Dense(15))\n",
-    "model.add(Activation(\"hard_sigmoid\"))\n",
-    "model.add(BatchNormalization())\n",
-    "model.add(Dropout(0.1))\n",
-    "\n",
-    "model.add(Dense(1))\n",
-    "model.add(Activation('sigmoid'))\n",
-    "\n",
-    "model.compile(loss='binary_crossentropy', optimizer='adam')\n",
-    "\n",
-    "model.fit(X_train_scaled, y_train, batch_size=batch_size, epochs=nb_epoch, verbose=0)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Bu kısımda ise eğittimiz modele test verisetini yollayarak tahmin değerlerini aldık, aldığımız tahmin değerleri 0-1 arasında olduğundan dolayı bunu 0.5'ten yukarısı 1 aşağısı 0 şeklinde kestik. Ve Tahminlerimizi gerçek sonuçlar ile karşılaştırdık."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "confusion_matrix:\n",
-      " [[715 272]\n",
-      " [ 98 207]]\n",
-      "accuracy_score:  0.7136222910216719\n"
+      " [[909  78]\n",
+      " [141 164]]\n",
+      "accuracy_score:  0.8304953560371517\n"
      ]
     }
    ],
    "source": [
-    "y_pred = model.predict(X_test_scaled)\n",
-    "y_pred = (y_pred > 0.5) * 1\n",
-    "\n",
-    "cm = confusion_matrix(y_test, y_pred)\n",
+    "model = GradientBoostingClassifier(learning_rate=0.15,n_estimators=137,subsample=0.7, random_state=51)\n",
+    "model = model.fit(X_train, y_train)\n",
+    "y_pred = model.predict(X_test)\n",
+    "cm = confusion_matrix(y_test, y_pred) \n",
     "print(\"confusion_matrix:\\n\", cm)\n",
     "print(\"accuracy_score: \", accuracy_score(y_test, y_pred))"
    ]
@@ -564,7 +498,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Burada ise Modeli daha sonra Majority Vote Algoritmasında çağırabilmek için Ağırlıkları ve Mimarisi olarak 2 ayrı dosyada kaydettik."
+    "- En son olarak Majority Vote Algoritmasında kullanmak üzere bunu pickle ile dump ettim. "
    ]
   },
   {
@@ -573,18 +507,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#model.save_weights('model_weights.h5')\n",
-    "\n",
-    "#with open('model_architecture.json', 'w') as f:\n",
-    "#    f.write(model.to_json())"
+    "filename = 'traditionalml.sav'\n",
+    "pickle.dump(model, open(filename, 'wb'))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
