--- a/Notebooks/Majority Vote Algorithm.ipynb
+++ b/Notebooks/Majority Vote Algorithm.ipynb
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "#Verisetinin import edilmesi, duplicate değerler'in düşürülmesi\n",
-    "test = pd.read_excel(\"X_test.xlsx\")\n",
+    "test = pd.read_excel(\"../Datasets/X_test.xlsx\")\n",
     "test = test.drop_duplicates()\n",
     "target = test.Churn\n",
     "test.drop(\"Churn\", axis=1, inplace=True)\n",
@@ -96,7 +96,7 @@
     }
    ],
    "source": [
-    "traditionalml = pickle.load(open('traditionalml.sav', 'rb'))\n",
+    "traditionalml = pickle.load(open('../Model Pickle/traditionalml.sav', 'rb'))\n",
     "traditionalml"
    ]
   },
@@ -155,7 +155,7 @@
     }
    ],
    "source": [
-    "olasilikbazli = pickle.load(open('olasilikbazlimodel.sav', 'rb'))\n",
+    "olasilikbazli = pickle.load(open('../Model Pickle/olasilikbazlimodel.sav', 'rb'))\n",
     "olasilikbazli"
    ]
   },
@@ -301,10 +301,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('model_architecture.json', 'r') as f:\n",
+    "with open('../Model Pickle/model_architecture.json', 'r') as f:\n",
     "    kerasmodel = model_from_json(f.read())\n",
     "\n",
-    "kerasmodel.load_weights('model_weights.h5')"
+    "kerasmodel.load_weights('../Model Pickle/model_weights.h5')"
    ]
   },
   {
@@ -408,9 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
