--- a/Notebooks/Olasılık Bazlı ML.ipynb
+++ b/Notebooks/Olasılık Bazlı ML.ipynb
@@ -259,7 +259,7 @@
     }
    ],
    "source": [
-    "loans = pd.read_excel(\"newdataFullv3.xlsx\")\n",
+    "loans = pd.read_excel(\"../Datasets/newdataFullv3.xlsx\")\n",
     "loans = loans.dropna()\n",
     "loans.head()"
    ]
