--- a/Notebooks/Veri Analizi.ipynb
+++ b/Notebooks/Veri Analizi.ipynb
@@ -102,7 +102,7 @@
     }
    ],
    "source": [
-    "data = pd.read_excel(\"newdataFullv3.xlsx\")\n",
+    "data = pd.read_excel(\"../Datasets/newdataFullv3.xlsx\")\n",
     "data = data.dropna()\n",
     "data.info()"
    ]
